// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots User Inputs/Buttons/Button Default 1`] = `
<div>
  <div
    className="center"
  >
    <button
      className="ant-btn ant-btn-primary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span>
        Text
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots User Inputs/Buttons/Button Disable 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="marginFlexContainer"
    >
      <button
        className="ant-btn ant-btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span>
          Enable
        </span>
      </button>
      <button
        className="ant-btn ant-btn-primary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span>
          Disabled
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots User Inputs/Buttons/Button Play Ground 1`] = `
<div>
  <div
    className="center"
  >
    <button
      className="ant-btn ant-btn-primary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span>
        Button Text
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots User Inputs/Buttons/Button Sizes 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="marginFlexContainer"
    >
      <button
        className="ant-btn ant-btn-primary ant-btn-lg"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span>
          Large
        </span>
      </button>
      <button
        className="ant-btn ant-btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span>
          middle
        </span>
      </button>
      <button
        className="ant-btn ant-btn-primary ant-btn-sm"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span>
          small
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots User Inputs/Buttons/Button Variants 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="marginFlexContainer"
    >
      <button
        className="ant-btn ant-btn-dashed"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span>
          dashed
        </span>
      </button>
      <button
        className="ant-btn ant-btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span>
          primary
        </span>
      </button>
      <button
        className="ant-btn ant-btn-ghost"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span>
          ghost
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots User Inputs/Buttons/Button With Class Name 1`] = `
<div>
  <div
    className="center"
  >
    <div
      className="marginFlexContainer"
    >
      <button
        className="ant-btn ant-btn-primary successBackgroundColor"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span>
          Text
        </span>
      </button>
      <button
        className="ant-btn ant-btn-primary alertColor"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span>
          Text
        </span>
      </button>
      <button
        className="ant-btn ant-btn-ghost errorColor"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span>
          Text
        </span>
      </button>
    </div>
  </div>
</div>
`;
